chore(accordion): update docs

--- a/packages/ui/src/components/accordion/Accordion.astro
+++ b/packages/ui/src/components/accordion/Accordion.astro
@@ -2,7 +2,7 @@
 /**
  * @component Accordion
  * @title Accordion
- * @description Vertically stacked collapsible sections that let users show and hide content panels by clicking headings.
+ * @description Vertically stacked collapsible sections that let users show and hide content panels.
  * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/BejamasUI---Design-System?node-id=2589-14086&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
@@ -13,7 +13,7 @@
  *       Is it accessible?
  *     </AccordionTrigger>
  *     <AccordionContent>
- *       Yes. It uses native details/summary and no JS.
+ *       Yes. It adheres to WAI-ARIA design patterns.
  *     </AccordionContent>
  *   </AccordionItem>
  *   <AccordionItem value="accordion-item-2">
@@ -39,7 +39,7 @@
  *       Is it accessible?
  *     </AccordionTrigger>
  *     <AccordionContent>
- *       Yes. It uses native details/summary and no JS.
+ *       Yes. It adheres to WAI-ARIA design patterns.
  *     </AccordionContent>
  *   </AccordionItem>
  * </Accordion>
@@ -55,7 +55,7 @@
  *       Is it accessible?
  *     </AccordionTrigger>
  *     <AccordionContent>
- *       Yes. It uses native details/summary and no JS.
+ *       Yes. It adheres to WAI-ARIA design patterns.
  *     </AccordionContent>
  *   </AccordionItem>
  *   <AccordionItem value="accordion-item-2">
