--- a/packages/ui/src/components/tabs/TabsTrigger.astro
+++ b/packages/ui/src/components/tabs/TabsTrigger.astro
@@ -4,14 +4,12 @@ import { cn } from "@bejamas/ui/lib/utils";
 import type { HTMLAttributes, HTMLTag } from "astro/types";
 
 type Props = {
-  as?: HTMLTag;
   value: string;
   disabled?: boolean;
   class?: string;
 } & HTMLAttributes<"button">;
 
 const {
-  as: Tag = "button",
   value,
   disabled = false,
   class: className = "",
@@ -23,16 +21,16 @@ const tabsTriggerVariants = cva(
 );
 ---
 
-<Tag
+<button
   {...rest}
   type="button"
   role="tab"
   data-slot="tabs-trigger"
   data-value={value}
   class={cn(
-    "inline-flex items-center relative z-1 justify-center rounded-md px-3 py-1.5 text-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring/50",
+    "inline-flex items-center relative z-1 justify-center rounded-md px-4 py-4 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring/50",
     className,
   )}
 >
   <slot />
-</Tag>
+</button>
