--- a/packages/ui/src/components/button-group/ButtonGroup.astro
+++ b/packages/ui/src/components/button-group/ButtonGroup.astro
@@ -46,7 +46,7 @@
  *
  * ### Size
  *
- * <div className="flex flex-col items-start gap-8">
+ * <div class="flex flex-col items-start gap-8">
  *   <ButtonGroup>
  *     <Button variant="outline" size="sm">
  *       Small
@@ -127,4 +127,3 @@ const buttonGroupVariants = cva(
 >
   <slot />
 </div>
-
