--- a/packages/ui/src/components/input-group/InputGroup.astro
+++ b/packages/ui/src/components/input-group/InputGroup.astro
@@ -7,7 +7,7 @@
  *
  * @preview
  *
- * <div className="grid w-full max-w-sm gap-6">
+ * <div class="grid w-full max-w-sm gap-6">
  *   <InputGroup>
  *     <InputGroupInput placeholder="Search..." />
  *     <InputGroupAddon>
