--- a/templates/monorepo-astro-with-docs/apps/web/src/pages/index.astro
+++ b/templates/monorepo-astro-with-docs/apps/web/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import Button from "@repo/ui/components/Button.astro";
+import { Button } from "@repo/ui/components/button";
 ---
 
 <Layout>
