--- a/templates/astro/src/pages/index.astro
+++ b/templates/astro/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import Button from "@/ui/Button.astro";
+import { Button } from "@/ui/button";
 ---
 
 <Layout>
