--- a/templates/monorepo-astro-with-docs/packages/ui/src/components/badge/Badge.astro
+++ b/templates/monorepo-astro-with-docs/packages/ui/src/components/badge/Badge.astro
@@ -17,17 +17,17 @@
  *     <Badge shape="pill">Pill</Badge>
  *     <Badge shape="pill" variant="secondary">Secondary</Badge>
  *     <Badge shape="pill" variant="destructive">Destructive</Badge>
- *     <Badge shape="pill" variant="outline">Outline <XIcon className="size-6" /></Badge>
+ *     <Badge shape="pill" variant="outline">Outline <XIcon class="size-6" /></Badge>
  *   </div>
  *   <div class="flex w-full flex-wrap gap-3">
  *     <Badge
  *       variant="secondary"
  *       class="bg-blue-500 text-white dark:bg-blue-600 border-blue-600"
  *     >
- *       <BadgeCheckIcon className="size-3" />
+ *       <BadgeCheckIcon class="size-3" />
  *       Verified
  *     </Badge>
- *     <Badge className="h-5 min-w-5 rounded-full px-1 font-mono tabular-nums">
+ *     <Badge class="h-5 min-w-5 rounded-full px-1 font-mono tabular-nums">
  *         8
  *     </Badge>
  *     <Badge
@@ -45,6 +45,16 @@
  *   </div>
  * </div>
  *
+ * @usage
+ *
+ * ```astro
+ * ---
+ * import { Badge } from '@bejamas/ui/components/badge';
+ * ---
+ *
+ * <Badge>Badge</Badge>
+ * <Badge variant="secondary">Secondary</Badge>
+ * ```
  */
 
 import type { HTMLTag, Polymorphic } from "astro/types";
