--- a/packages/starlight-theme-bejamas/src/overrides/Pagination.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Pagination.astro
@@ -7,7 +7,7 @@ const { prev, next } = pagination;
 const isRtl = dir === "rtl";
 ---
 
-<div class="sl-flex sl-justify-between print:hidden z-10" dir={dir}>
+<div class="print:hidden z-10 pagination-links" dir={dir}>
   {
     prev && (
       <Button as="a" href={prev.href} rel="prev" variant="outline">
@@ -29,15 +29,17 @@ const isRtl = dir === "rtl";
 <style>
   @layer starlight.core {
     .pagination-links {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(min(18rem, 100%), 1fr));
+      display: flex;
+      justify-content: flex-end;
       gap: 1rem;
+      margin-top: calc(var(--spacing) * 5);
     }
 
     [rel="next"] {
       justify-content: end;
       text-align: end;
       flex-direction: row-reverse;
+      margin-left: auto;
     }
 
     svg {
